Fix error where Helvetica Neue font causes cutoff in dialog box.

--- a/src/main/resources/view/main.css
+++ b/src/main/resources/view/main.css
@@ -1,5 +1,5 @@
 .root {
-    -fx-font-family: "Helvetica Neue";
+    -fx-font-family: "Helvetica";
 }
 
 /* This is never used byt for some reason I have a dialogContainer in MainWindow */
